kubernetes/applications/bentopdf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: bentopdf
